Devworks/src/objects/Favorite__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Favorites</relationshipLabel>
        <relationshipName>Favorites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Properties__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Favorites (Property)</relationshipLabel>
        <relationshipName>Favorites1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Favorites</relationshipLabel>
        <relationshipName>Favorites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Favorites</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Favorite</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>F-{00000000}</displayFormat>
        <label>Favorite Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Favorites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>